Revert "fix(web-components): fixed hyphenated title link on Safari"
This reverts commit 823d5f2c8ab97b3505a96cd476dbf79b182e9d76.

--- a/packages/web-components/src/components/ic-top-navigation/ic-top-navigation.css
+++ b/packages/web-components/src/components/ic-top-navigation/ic-top-navigation.css
@@ -252,7 +252,6 @@ slot[name="toggle-icon"] svg {
       margin-right: var(--ic-space-xxxs);
       word-break: break-word;
       hyphens: auto;
-      hyphens: none; /* Safari Only */
     }
 
     .top-panel-container {
